--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -41,7 +41,7 @@
       </div>
     </div>
     <div class="col-md-8">
-      <div id="carte" class="carte">
+      <div id="carte">
       </div>
     </div>
   </div>
