--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -41,7 +41,7 @@
       </div>
     </div>
     <div class="col-md-4">
-      <div id="liste-activites">
+      <div id="liste-activities">
       </div>
     </div>
   </div>
