recherche pas nom et dates marche, recenter/zoom aussi, liste upadte

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -25,6 +25,8 @@
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <form id="search-form" class="navbar-form navbar-right" role="search">
           <div class="form-group">
+            From: <input id="from-input" type="date" class="form-control"/>
+            To: <input id="to-input" type="date" class="form-control"/>
             <input id="search-input" class="form-control" placeholder="rechercher" />
           </div>
           <button type="submit" class="btn btn-primary">
