--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -25,8 +25,7 @@
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <form id="search-form" class="navbar-form navbar-right" role="search">
           <div class="form-group">
-            From: <input id="from-input" type="date" class="form-control"/>
-            To: <input id="to-input" type="date" class="form-control"/>
+            From: <input id="from-input" type="date" class="form-control" /> To: <input id="to-input" type="date" class="form-control" />
             <input id="search-input" class="form-control" placeholder="rechercher" />
           </div>
           <button type="submit" class="btn btn-primary">
@@ -41,6 +40,25 @@
     <div class="col-md-8">
       <div id="carte">
       </div>
+      <br />
+      <form id="activity-form">
+        <div class="form-group">
+          <input type="radio" id="addRadio" onclick="radioClick(this);" name="action" value="ajouter" checked="checked"> Ajouter</input>
+          <input type="radio" id="modifyRadio" onclick="radioClick(this);" name="action" value="modifier"> Modifier</input>
+          <input type="radio" id="deleteRadio" onclick="radioClick(this);" name="action" value="delete"> Supprimer</input>
+          <br/>
+          <input type="number" class="form-control" id="form-id" placeholder="ID"/>
+          <input type="text" class="form-control" id="form-name" placeholder="Name"/>
+          <input type="text" class="form-control" id="form-description" placeholder="Description" />
+          <input type="text" class="form-control" id="form-arrondissement" placeholder="Arrodissement"/>
+          <input type="date" class="form-control" id="form-date" placeholder="Date"/>
+          <input type="text" class="form-control" id="form-nom-place" placeholder="Nom du lieu"/>
+          <input type="text" class="form-control" id="form-lat" placeholder="Latitude"/>
+          <input type="text" class="form-control" id="form-lng" placeholder="Longitude"/>
+          <input type="submit" value="Soumettre" id="submit-button" class="btn btn-primary"/>
+        </div>
+
+      </form>
     </div>
     <div class="col-md-4">
       <div id="liste-activities">
